--- a/guia-tricaru.html
+++ b/guia-tricaru.html
@@ -65,7 +65,7 @@
             <div class="box-img-verde">
                 <img src="imagens/guia-tricaru-verdehile.png" alt="" class="img-verde">
             </div>
-            <p>As runas são baseadas na passiva do verd. Quanto maior o Dano crítco e o atk, mais ele cura. A taxa crítica do verd, tem que ser 100%. Para que a barra de atak dos mobs, encha e faça ganhar turnos.</p>
+            <p>As runas são baseadas na passiva do Verd. Quanto maior o Dano crítco e o Atk, mais ele cura. A taxa crítica do Verd, tem que ser 100%. Para que a barra de Atk dos mobs, encha e faça ganhar turnos.</p>
             <p>Recomenda-se por set de <strong>Rage/Blade</strong>, mas pode-se usar set <strong>Fatal/Blade</strong> ou <strong>Violet/Blade</strong>.</p>
              <div class="box-img-verde">
                 <img src="imagens/guia-tricaru-verdehile-runas.png" alt="" class="img-verde-runas">
