correção de arquitetura

--- a/index.html
+++ b/index.html
@@ -27,30 +27,35 @@
             <nav><a href="runas.html">Runas</a></nav>
         </menu>
     </header>
-    <main>
-        <section class="comunicado">
-            <h2>BEM VINDO INVOCADOR!</h2>
-            <p class="text-center">ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</p>
-        </section>
-        <hr>
-        <section class="resumo">
-            <img src="imagens/banner-luta.png" alt="" class="imghome">
-            <h3>Breve Resumo do Jogo!</h3>
-            <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena. Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
-            <p>O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.</p>
-            <p> Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o bom e velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas vezes você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.</p>
-        </section>
-        <hr>
-        <section class="video">
-            <div id="video-home">
-                <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
-                    title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </section>
-    </main>
+    <div class="big-box">
+        <main class="box-main">
+            <section class="comunicado">
+                <h2>BEM VINDO INVOCADOR!</h2>
+                <p class="text-center">ESTE SITE IRÁ TE AJUDAR NAS MELHORES ESCOLHAS PARA SEU EARLY & MID GAME</p>
+            </section>
+            <hr>
+            <section class="resumo">
+                <img src="imagens/banner-luta.png" alt="" class="imghome">
+                <h3>Breve Resumo do Jogo!</h3>
+                <p>Summoners War é um jogo para celular, que permite que você lute emocionantes batalhas táticas de arena. Existe até um campeonato mundial chamado "Summoners War World Arena Championship, onde há muito dinheiro para ganhar. Mas do que se trata a Guerra de Invocadores?</p>
+                <p>O jogo de tática que tem mais de 70 milhões de jogadores. O segredo do sucesso é a jogabilidade tática. Em uma arena, você joga como invocador contra um oponente usando combinações de diferente mobs.</p>
+                <p> Cada um desses seres tem poderes diferentes, cada um associado a um elemento. Tal como acontece com o bom e velho pedra-papel-tesoura, a combinação certa decide sobre a vitória ou derrota. Dependendo de quantas vezes você ganha na chamada Sky Arena, sua classificação aumenta e você pode participar de torneios.</p>
+            </section>
+            <hr>
+            <section class="video">
+                <div id="video-home">
+                    <iframe width="95%" height="376" src="https://www.youtube.com/embed/6xYCsZW07o4"
+                        title="Summoners War - Cinematic Trailer [HD]" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </section>
+        </main>
+        <div class="box-menu-lateral">
+            <p>Guia das Bestas Elementares</p>
+        </div>
+    </div>
     <section class="contato">
         <div id="contato2">
             <a href=""><img src="imagens/logo-reactattack.png" alt="logo-rt" class="imgreact"></a>
