--- a/guia-do-iniciante.html
+++ b/guia-do-iniciante.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="painel-banner">
-        <img src="#" alt="">
+        <img src="imagens/banner-sw2.png" alt="" class="img-painel">
     </div>
     <header>
         <span class="material-icons" id="menuHamb">menu</span>
