--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <div class="painel-banner">
-        <img src="imagens/banner-sw2.png" alt="" class="img-painel">
+        <img src="imagens/logo-reactattack2.png" alt="" class="img-logo-painel">
+        <img src="imagens/banner-sw2.png" alt="" class="img-banner-painel">
     </div>
     <header>
         <span class="material-icons" id="menuHamb">menu</span>
