responsividade banner e logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="painel-banner">
         <img src="imagens/banner-sw2.png" alt="" class="img-banner-painel">
+        <img src="imagens/logo-reactattack2.png" alt="" class="img-logo-painel">
     </div>
     <header>
         <span class="material-icons" id="menuHamb">menu</span>
@@ -53,8 +54,17 @@
                 </div>
             </section>
         </main>
-        <div class="box-menu-lateral">
-            <p>Guia das Bestas Elementares</p>
+        <div class="box-lateral">
+            <div class="cases">
+                <div class="case-logo">
+                    <img src="imagens/logo-reactattack2.png" alt="" class="img-logo-lateral">
+                </div>
+            </div>
+            <div class="cases">
+                <div class="case-menu">
+                    <p>guias</p>
+                </div>
+            </div>
         </div>
     </div>
     <section class="contato">
